# etternaonline-api

./: Cargo.toml  README.md
src/: extension_traits.rs  lib.rs  structs.rs
src/common/: mod.rs  structs.rs
src/common/structs/: mod.rs  skillsets.rs
src/structs/: mod.rs  skillsets.rs
src/v1/: mod.rs  structs.rs
src/v2/: mod.rs  structs.rs
src/web/: mod.rs  structs.rs
