[package]
name = "etternaonline_api"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
license = "MIT"
description = "A Rust wrapper for the v2 API of https://etternaonline.com"
repository = "https://github.com/kangalioo/etternaonline-api"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
keywords = ["etterna", "http", "bindings"]

[dependencies]
ureq = { version = "1.3", features = ["json"] }
serde_json = "1.0"
# thiserror_lite = { path = "../thiserror_lite" }
thiserror_lite = { git = "https://github.com/kangalioo/thiserror_lite" }
serde_ = { package = "serde", version = "1.0", features = ["derive"], optional = true }
libm = "0.2.1"
# etterna = { package = "etterna_base", path = "../etterna-base" }
etterna = { package = "etterna_base", git = "https://github.com/kangalioo/etterna-base" }

[features]
serde = ["serde_", "etterna/serde"]