[package]
name = "etternaonline_api"
version = "0.2.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
license = "MIT"
description = "A Rust wrapper for the v2 API of https://etternaonline.com"
repository = "https://github.com/kangalioo/etternaonline-api"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
keywords = ["etterna", "http", "bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
thiserror_lite = "0.1.0"
# thiserror_lite = { path = "../thiserror_lite" }
# thiserror_lite = { git = "https://github.com/kangalioo/thiserror_lite" }
serde_ = { package = "serde", version = "1.0", features = ["derive"], optional = true }
libm = "0.2.1"
etterna = "0.1.0"
# etterna = { path = "../etterna-base" }
# etterna = { git = "https://github.com/kangalioo/etterna-base" }
tokio = "1.0"

[features]
serde = ["serde_", "etterna/serde"]
